[gd_scene load_steps=7 format=2]

[ext_resource path="res://cerita/cerita.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/matching/assets/fonts/Nunito-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://asset/scene_pesan_moral.png" type="Texture" id=3]
[ext_resource path="res://asset/audio/Nasihat org kayo hitam.wav" type="AudioStream" id=4]
[ext_resource path="res://cerita/SceneAkhir.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 2 )

[node name="SceneAkhir" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="TextureRect" parent="Control" index="0"]
texture = ExtResource( 3 )

[node name="Panel" parent="Control" index="1"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 152.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="Control" index="2"]
margin_left = 56.0
margin_top = 360.0
margin_right = 385.0
margin_bottom = 680.0
custom_fonts/font = SubResource( 1 )
text = "Kita harus mencintai, 
menjaga, dan 
melindungi 
tanah air dari 
segala marabahaya 
yang mengancam"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlCerita" parent="Control" index="4"]
visible = false

[node name="narasi" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 4 )
[connection signal="pressed" from="Control/Panel2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Panel2/mute" to="." method="_on_mute_pressed"]
[connection signal="finished" from="narasi" to="." method="_on_narasi_finished"]
